--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://curt-dev-hub.github.io/aboutMe-react-refactor/"
+  "homepage": "https://curt-dev-hub.github.io/aboutMe-react-refactor/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
