--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "homepage": "https://curt-dev-hub.github.io/aboutMe-react-refactor/",
   "scripts": {
+    "predeploy": "npm run build",
     "dev": "vite",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
